[project]
name = "agent5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "musman4it", email = "musman4it@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.14",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
agent5 = "agent5:main"
abc = "agent5.main:agent_func"
agentn = "agent5.newagent:agentn_func"
cbot = "agent5.helloagent:main"
global123 = "agent5.global_config:run_global"
async11 = " agent5.async1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
